fix misalignment on flip

--- a/flipStyle.css
+++ b/flipStyle.css
@@ -64,8 +64,7 @@ h3 {
   opacity: 1;
   height: 15vh;
   width: 15vh;
-  margin: 10px;
-  border-radius: 2px;
+  margin: 12px;
 }
 
 #game div.front-side {
